# CSC_project

./: .gitignore  CMakeLists.txt  FHE.cpp  FHE.h  SEALDemo.cpp  admin  admin.sh  client.cpp  client_sign_and_encryption.sh  cmds_example.txt  config.h  decrypt_commands.cpp  encrypt_commands.cpp  env_build.sh  process_command.py  read_cmd_server.cpp  server  server.py  server_verify_and_decryption.sh
Admin/: admin.cpp  admin.h  admin.py  admin.sh  admin_security.h  config.json  csc-server.crt  csc-server.csr  csc-server.pem  main.py  my-ca.key  my-ca.srl  seal_admin_interface.h  utils.h
Admin/cache/: client.py
Admin/client0/: csc-client0.pem
Admin/client0/client1/: admin  csc-client1.csr  csc-client1.pem
Admin/client0/client1/client2/: csc-client2.csr  csc-client2.pem
Clients/: api.h  client.cpp  client.h  client_parse_cmd.h  command_example.txt  file_watcher.h  seal_client_interface.h
Clients/client0/: command.txt  response.txt
SealInterface/: seal_wrapper.cpp  seal_wrapper.h
Server/: api.h  comparator.h  config.json  data_base.h  databasemanager.py  file_watcher.h  fileparser.py  main.py  parse_cmd.h  process_command.py  read_cmd_server.cpp  read_cmd_server.h  recycle.txt  seal_client_interface.h  seal_server_interface.h  security.py  server.cpp  server.h  server.py  server2.cpp  server_parse_cmd.h  table.h  utils.h
Test/: comparator.h  data_base.h  sec.txt  test.cpp  test.h  utils.h
lixos/: main.py  security.py
openssl_cpp_example/: decrypt  decrypt.cpp  encrypt  encrypt.cpp  genkeys  genkeys.cpp  private.pem  public.pem
(+3 files in other folders)
